--- a/src/app/splash/splash.page.html
+++ b/src/app/splash/splash.page.html
@@ -1,5 +1,8 @@
 <div class="splash-container">
+  <div class="letras-container">
+    <p class="splash-text2">PPS</p>
+    <p class="splash-text2">2025</p>
+    <img src="assets/icon-only.png" class="splash-logo" />
+  </div>
   <p class="splash-text">De Castro Jonathan</p>
-  <img src="assets/icon-only.png" class="splash-logo" />
-  <p class="splash-text">PPS - 2025</p>
 </div>
