--- a/src/app/splash/splash.page.scss
+++ b/src/app/splash/splash.page.scss
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background: #eedba8;
+    background: #ffc831;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,15 +10,28 @@
     animation: fadeOut 1s ease 2500ms forwards;
   }
   
+  .letras-container{
+    display: flex;
+  }
+
+
   .splash-logo {
     width: 150px;
     animation: pulse 1s ease infinite alternate;
   }
   
   .splash-text {
-    color: white;
+    color: rgb(0, 0, 0);
     margin-top: 20px;
     animation: pulse 1s ease infinite alternate;
+  }
+  .splash-text2 {
+    font-size: 25px;
+    color: rgb(0, 0, 0);
+    margin-top: 20px;
+    animation: pulse 1s ease infinite alternate;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
   }
   
   @keyframes zoomIn {
