--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,28 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Podés cambiar el color!!!
+      Activá la alarma!!!
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" color="{{mi_color}}">
-  <ion-card >
-    <ion-card-header>Cambiar el color de fondo</ion-card-header>
+<ion-content [fullscreen]="true" >
+  <ion-card color="primary">
     <ion-card-content> 
-      <ion-label>Seleccionar Color:</ion-label>
-      <ion-select #color>
-        <ion-select-option value="primary">Primary</ion-select-option>
-        <ion-select-option value="secondary">Secondary</ion-select-option>
-        <ion-select-option value="tertiary">Tertiary</ion-select-option>
-        <ion-select-option value="success">Success</ion-select-option>
-        <ion-select-option value="warning">Warning</ion-select-option>
-        <ion-select-option value="danger">Danger</ion-select-option>
-        <ion-select-option value="light">Light</ion-select-option>
-        <ion-select-option value="medium">Medium</ion-select-option>
-        <ion-select-option value="dark">Dark</ion-select-option>
-      </ion-select>
-      <ion-button color="secondary" ion-button block (click)="CambiarColor(color.value)">Cambiar Color</ion-button>
+      <img src="../../assets/sombrero-pirata.png" alt="alarmaApagada"  class="boton">
     </ion-card-content>
   </ion-card>
 </ion-content>
