--- a/src/app/splash/splash.page.scss
+++ b/src/app/splash/splash.page.scss
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background: #ffc831;
+    background: #ffd257;
     display: flex;
     flex-direction: column;
     justify-content: center;
