--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -14,3 +14,12 @@
   :root {
     --ion-font-family: "Zen Dots", sans-serif;
   }
+
+  
+:root {
+  /**
+   * Setting the variables for DEMO purposes only.
+   * Values will be set automatically when building an iOS or Android app.
+   */
+  --ion-safe-area-top: 20px;
+}
