--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,6 +1,6 @@
 
 <ion-content [fullscreen]="true" >
-  <ion-card color="primary" (click)="activarCarta()">
+  <ion-card color="primary" (click)="activarAlarma()">
     <ion-card-content> 
       <img [src]="alarmaActivada ? '../../assets/alarma-activa.png' : '../../assets/alarma-inactiva.png'" alt="alarma"  class="boton" [ngClass]="{'pulse-animacion': alarmaActivada}">
     </ion-card-content>
